-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.0
-
None
Some issues found in QHeaderView:
When using setMin/MaximumSectionSize, the current section sizes are not adjusted.
resizeSection() does not check for the bounds which results in strange results depending on the current resize mode (if a stretch section is available, the section size is adjusted to min/max but the first sectionResized Signal contains the wrong size, otherwise the size is not adjusted to min/max)
When no minimumSectionSize is set, then a system-default size is used. This size is system-dependent (and can be very high on some systems) - this sometimes breaks tst_qheaderview.
This is a follow-up from QTBUG-64036
- resulted in
-
QTBUG-106107 setRowHeight in QTableWidget does not work correct
-
- Closed
-